[package]
name = "build_sentry_protos"
version = "1.0.0"
edition = "2021"
readme = "README.md"
description = "Build Rust bindings for sentry-protos"
license-file = "LICENSE.md"
authors = ["Sentry <hello@sentry.io>"]
repository = "https://github.com/getsentry/sentry-protos"

[dependencies]
glob = "0.3.1"
prost = "0.13"
prost-types = "0.13"
regex = "1.10.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tonic-build = "0.12"
