[package]
name = "build_sentry_protos"
version = "1.0.0"
edition = "2021"
publish = false
readme = "README.md"
description = "Build Rust bindings for sentry-protos"
license-file = "LICENSE.md"
authors = ["Sentry <hello@sentry.io>"]
repository = "https://github.com/getsentry/sentry-protos"

[dependencies]
glob = "0.3.1"
tonic-prost-build = "0.14"
