[package]
name = "sentry_protos"
version = "0.4.10"
edition = "2021"
readme = "README.md"
description = "Rust bindings for sentry-protos"
license-file = "LICENSE.md"
authors = ["Sentry <hello@sentry.io>"]
repository = "https://github.com/getsentry/sentry-protos"

[dependencies]
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
