[package]
name = "sentry_protos"
version = "0.7.0"
edition = "2021"
readme = "README.md"
description = "Rust bindings for sentry-protos"
license-file = "LICENSE.md"
authors = ["Sentry <hello@sentry.io>"]
repository = "https://github.com/getsentry/sentry-protos"

[lints.clippy]
large_enum_variant = "allow" # Auto generated code

[dependencies]
tonic = "0.14"
tonic-prost = " 0.14"
prost = "0.14"
prost-types = "0.14"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
